# cpp_optim

./: .gitignore  CMakeLists.txt  README.ipynb  README.md  main.cpp
src/: conjugategradient.cpp  conjugategradient.hpp  functions.cpp  functions.hpp  gaussnewton.cpp  gaussnewton.hpp  gradientdescent.cpp  gradientdescent.hpp  optimizer.cpp  optimizer.hpp  returnvalue.hpp
